Mon Dec 30 01:06:12 2002  Tim Janik  <timj@gtk.org>

	* merged sfk-launch branch into HEAD. oddly enough, there's
	still no SFK yet. BSE uses an SFI based middle ware layer
	now which supports structure definitions in IDL files and
	contains the neccessary logic to seperate BSE into an extra
	thread (in or out of process) and generate client side API
	wrapper code.

Sat Dec 28 09:38:50 2002  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstrackitem.[hc]: switched code over from old
	BstControllers to BstParams.

	* beast-gtk/bstparam.c: removed code performing automated value
	transforms, the param implementations do neccessary transforms
	themselves. API cleanups, fixed callers. expose list of param
	implementations and rating facility.

	* beast-gtk/bstparam-entry.c: fix signal connection.

	* bstparam-toggle.c: support check and radio buttons.

	* beast-gtk/bstparam-scale.c: new rack property views: knob, scale,
	h/v scale.

	* beast-gtk/bstlogadjustment.c: fix referencing. the log adjustment
	keeps the client adjustment alive and bst_log_adjustment_from_adj()
	returns an unsunken log adjustment.

	* beast-gtk/bstcontrollers.[hc]: removed these, replaced by BstParams.

Thu Dec 26 22:05:29 2002  Tim Janik  <timj@gtk.org>

	* bstplayback.[hc]: pass on the current tick stamp for pcm position
	notifications.
	allow timing adjustments of pcm position notifier during playback.
	(wave_oscillator_pcm_notify): discard pcm position changes following
	a seek as those contain outdated data.

	* bstwaveeditor.[hc]: seperate scroll updates from pcm position
	notification. use our own timer which runs with a higher frequency
	than pcm position updates. set position pointer padding to 0 for
	smoother scrolling. vary pcm position notification timeouts to
	improve accuracy and reduce overhead.

	* beast-gtk/bstmain.c: use the new asyncronous registration mechanism
	of BseServer for scripts and plugins.
	fix sfi_thread_set_wakeup() call to come early enough. create